# ai-employee-gold

./: .gitignore  ARCHITECTURE.md  PRD.md  README.md  TASKS.md  pyproject.toml
config/: crontab.example
credentials/: README.md
odoo19/: docker-compose.yaml
reports/: gold_completion_report.md
scripts/: run_approval_executor.py  run_ceo_briefing.py  run_claude_processor.py  run_filesystem_watcher.py  run_finance_watcher.py  run_gmail_watcher.py  run_odoo_sync.py  run_watchdog.py  setup_gmail_auth.py
skills/ceo-briefing/: SKILL.md
skills/item-processor/: SKILL.md
skills/ralph-wiggum/: SKILL.md
skills/social-poster/: SKILL.md
src/briefings/: __init__.py  ceo_briefing.py  data_collectors.py
src/executors/: __init__.py  approval_executor.py
src/hooks/: __init__.py  ralph_wiggum.py
src/mcp/: __init__.py  email_mcp.py  odoo_mcp.py  twitter_mcp.py
src/processors/: __init__.py  claude_processor.py
src/utils/: audit_logger.py  logger.py  vault_helpers.py
src/watchdog/: __init__.py  process_monitor.py
src/watchers/: __init__.py  base_watcher.py  filesystem_watcher.py  finance_watcher.py  gmail_watcher.py
tests/: __init__.py  test_approval_executor.py  test_audit_logger.py  test_ceo_briefing.py  test_claude_processor.py  test_data_collectors.py  test_email_mcp.py  test_filesystem_watcher.py  test_finance_watcher.py  test_graceful_degradation.py  test_integration.py  test_odoo_mcp.py  test_ralph_wiggum.py  test_twitter_mcp.py  test_vault_helpers.py  test_watchdog.py
vault/: Company_Handbook.md  Dashboard.md
vault/Business/: Business_Goals.md
(+5 files in other folders)
