[project]
name = "ai-employee"
version = "0.1.0"
description = "Personal AI Employee - An autonomous AI agent system that proactively monitors communications and manages tasks using Claude Code and Obsidian. Local-first architecture for privacy-preserving digital assistance."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "email-validator>=2.3.0",
    "google-api-python-client>=2.188.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.2.4",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "tenacity>=9.1.2",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
